<resources>
    <string name="app_name">MyCalc</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num0">0</string>
    <string name="num_dot">.</string>
    <string name="sym0">/</string>
    <string name="sym1">*</string>
    <string name="sym2">-</string>
    <string name="sym3">+</string>
    <string name="EnterName">Enter Name</string>
    <string name="UserNameRequired">User Name Required</string>
    <string name="UserNameValid">User Name Valid</string>
    <string name="EnterAge">Enter Age</string>
    <string name="EnterEmail">Enter Email</string>
    <string name="EnterPhone">Enter Phone</string>
    <string name="EnterPassword">Enter Password</string>
    <string name="PasswordRequired">Password Required</string>
    <string name="PasswordValid">Password Valid</string>
    <string name="PasswordInvalid">Password Invalid</string>
    <string name="EnterConfirmPassword">Enter Confirm Password</string>
    <string name="EnterAddress">Enter Address</string>
    <string name="EnterCity">Enter City</string>
    <string name="EnterState">Enter State</string>
    <string name="EnterZipCode">Enter Zip Code</string>
    <string name="EnterCountry">Enter Country</string>
    <string name="EnterBiography">Enter Biography</string>
    <string name="EnterTime">Enter Time</string>
    <string name="EnterDate">Enter Date</string>
    <string name="EnterNumber">Enter Number</string>
    <string name="EnterSignedNumber">Enter Signed Number</string>
    <string name="EnterDecimalNumber">Enter Decimal Number</string>
    <string-array name="Languages">
        <item>Java</item>
        <item>Kotlin</item>
        <item>C++</item>
        <item>C</item>
        <item>C#</item>
        <item>PHP</item>
        <item>Python</item>
        <item>Ruby</item>
        <item>Swift</item>
        <item>JavaScript</item>
        <item>Go</item>
        <item>Scala</item>
        <item>Spark</item>
        <item>Hadoop</item>
        <item>Hive</item>
        <item>Solidity</item>
        <item>R</item>
        <item>Matlab</item>

    </string-array>

    <string name="planHorizontal">Jio Plan</string>
    <string name="planHorizontal2">Jio Plan Offer</string>
    <string name="popularMore">+1 More</string>
    <string name="planValidity">Validity</string>
    <string name="planData">Data</string>
    <string name="planGetNow">Get Now</string>
    <string name="planOthers">Others Plan</string>
    <string name="planOthersMore">View Mores</string>
    <string name="title_activity_tab_navigation">TabNavigationActivity</string>
    <string name="tab_text_1">Chat</string>
    <string name="tab_text_2">Status</string>
    <string name="tab_text_3">Calls</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>