<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PersonName"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/personName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/EnterName"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/UserNameError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/UserNameRequired"
                android:textColor="#F44336"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EnterPassword"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/passwordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PasswordRequired"
                android:textColor="#F44336"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/NumberPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EnterPassword"
                android:inputType="numberPassword"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/EmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EnterEmail"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EnterPhone"
                android:inputType="phone"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/PostalAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EnterAddress"
                android:inputType="textPostalAddress"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/TextMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/EnterBiography"
                android:inputType="textMultiLine"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/Time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EnterTime"
                android:inputType="time"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EnterDate"
                android:inputType="date"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EnterNumber"
                android:inputType="number"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/NumberSigned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EnterSignedNumber"
                android:inputType="numberSigned"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/NumberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EnterDecimalNumber"
                android:inputType="numberDecimal"
                android:minHeight="48dp" />

            <AutoCompleteTextView
                android:id="@+id/selectState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EnterState"
                android:minHeight="48dp" />

            <MultiAutoCompleteTextView
                android:id="@+id/multiAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EnterCity"
                android:minHeight="48dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>